tests/ide_unmerged_deps/ide_unmerged_deps.exp

Trigger a slow recheck: DONE

Sleep: DONE

Get-def with unchecked dependency:
{"path":"dependency.js","line":3,"endline":3,"start":18,"end":20}

Did it finish in less than 2 seconds? YES

Original recheck finished:
Error -------------------------------------------------------------------------------------------- slow_dependent.js:5:2

Cannot cast `x` to number because string [1] is incompatible with number [2]. [incompatible-cast]

   slow_dependent.js:5:2
   5| (x: number); // error
       ^

References:
   dependency.js:3:18
   3| export const x = "x";
                       ^^^ [1]
   slow_dependent.js:5:5
   5| (x: number); // error
          ^^^^^^ [2]



Found 1 error

The Flow server is currently in lazy mode and is only checking 2/3 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes
